--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -1,63 +1,79 @@
 @import url(./fonts.css);
+@import url(./sidebar.css);
+@import url(./question.css);
+@import url(./animations.css);
 
 :root {
    --primary-color: rgb(0, 144, 157);
    --field-color: rgb(255, 255, 255);
+   --sidebar-width: 20vw;
+   /* --left-margin: 15vw; */
 }
 
 body {
    margin: 0;
    font-family: "Jost", "sans-serif";
-   background-color: #eff4f7;
-}
-
-.sidebar {
-   position: fixed;
-   width: 25vw;
-   height: 100%;
-   background-image: url(../assets/sidebar.jpg);
-   background-size: cover;
-   background-position: center;
+   background-color: #eef3f7;
 }
 
 .content {
+   margin-left: var(--sidebar-width);
+   overflow-x: hidden;
+}
+
+form {
+   padding-left: 20vw;
+}
+
+.form-content {
+   width: max-content;
+   display: flex;
+}
+
+/* Buutons */
+.button-container {
+   display: flex;
+   justify-content: space-between;
+   padding-right: 20vw;
+}
+.button-container > button {
+   position: relative;
    display: flex;
    justify-content: center;
-   margin-left: 25vw;
-}
-
-.question-pill {
-   width: -moz-fit-content;
-   width: fit-content;
-   height: auto;
-   margin-top: 0;
-   padding: 10px 20px;
-   border-radius: 25px;
-   background-color: var(--primary-color);
-   color: var(--field-color);
-   font-size: 15px;
-}
-
-.question {
-   width: 55vw;
-   font-size: 45px;
-}
-
-.options {
-   height: 70px;
-   background-color: red;
-}
-
-.question-option {
-   -webkit-appearance: none;
-   appearance: auto;
+   align-items: center;
    border-radius: 4px;
-   background-color: var(--field-color);
-   box-shadow: 0px 3px 32px 0px rgba(159, 159, 159, 0.1);
-   width: 100%;
-   padding: 15px 0;
-   font-size: 16pt;
+   background-color: black;
+   margin-top: 50px;
+   padding: 0 40px;
+   height: 66px;
+   font-size: 20px;
+   color: rgb(236, 227, 227);
    font-weight: bold;
+   overflow: hidden;
    cursor: pointer;
+   transition-duration: 300ms;
+}
+.button-container > button > span {
+   position: relative;
+}
+.button-container > button::before {
+   position: absolute;
+   content: "";
+   display: block;
+   width: 100%;
+   height: 100%;
+   transform: translateY(100%);
+   background-color: var(--primary-color);
+   transition-duration: 200ms;
+}
+.button-container > button:hover {
    transition: 0.4s;
+   border: solid 2px var(--primary-color);
+}
+.button-container > button:hover::before {
+   transform: none;
+}
+/* Hide back button initally. */
+.button-container > button:nth-child(1) {
+   display: none;
 }
