--- a/client/styles/question.css
+++ b/client/styles/question.css
@@ -228,6 +228,7 @@
 /* RATING */
 
 .user-rating-box {
+    position: relative;
     border-radius: 4px;
     background-color: white;
     box-shadow: 0px 3px 32px 0px rgba(159, 159, 159, 0.1);
@@ -252,14 +253,15 @@
         height: 80px;
     }
 }
-img.star {
+.user-rating-box .star {
     width: 30px;
-    aspect-ratio: 1;
-    cursor: pointer;
-    color: green;
 }
-@media (max-width: 768px) {
-    img.star {
-        width: 45px;
-    }
+.user-rating-label {
+    position: absolute;
+    bottom: 0;
+    transform: translateY(50%);
+    background-color: #4ca566;
+    padding: 5px 10px;
+    color: white;
+    border-radius: 4px;
 }
