--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -20,6 +20,8 @@ body {
 .user-alert-container {
     position: fixed;
     z-index: 1;
+    padding-left: 20px;
+    padding-top: 10px;
 }
 .user-alert {
     width: max-content;
@@ -35,11 +37,16 @@ body {
         align-items: center;
         width: 100%;
         padding-top: 30px;
+        padding-left: 0;
     }
 }
 .user-alert.error {
     background-color: #ffd5dc;
     color: #9b0000;
+}
+.user-alert.success {
+    background-color: #7fffd4;
+    color: #15a815;
 }
 
 .content {
