Rearrange folder structure

--- a/client/views/questions.html
+++ b/client/views/questions.html
@@ -4,24 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Quizo Html Template</title>
-        <link rel="stylesheet" href="styles/base.css" />
+        <link rel="stylesheet" href="./questions/style.css" />
     </head>
     <body>
-        <aside class="sidebar">
-            <div class="logo">
-                <img
-                    src="https://templates.seekviral.com/trimba3/forms/InterestingQuiz/assets/images/logo.png"
-                    alt="Logo Icon"
-                />
-                <div class="logo-text">Trimba <span>.</span></div>
-            </div>
-
-            <div class="progress">
-                <span>0% complete</span>
-                <progress value="50" max="100"></progress>
-            </div>
-        </aside>
-
         <main class="content">
             <form>
                 <!-- Form content here. -->
@@ -40,6 +25,11 @@
                 </div>
             </form>
         </main>
+
+        <div class="progress-area">
+            <span>0% complete</span>
+            <progress value="50" max="100">hj</progress>
+        </div>
     </body>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./questions/main.js"></script>
 </html>
