--- a/client/views/questions/style.css
+++ b/client/views/questions/style.css
@@ -1,7 +1,8 @@
-@import url(./fonts.css);
+@import url(../../styles/fonts.css);
+@import url(../../styles/animations.css);
+
 @import url(./sidebar.css);
 @import url(./question.css);
-@import url(./animations.css);
 
 :root {
     --field-color: rgb(255, 255, 255);
@@ -137,9 +138,5 @@ form {
 }
 /* Hide back button initally. */
 .button-container > button:nth-child(1) {
-    display: none;
-}
-
-hidden-icon {
     display: none;
 }
