--- a/client/src/styles/questions/base.css
+++ b/client/src/styles/questions/base.css
@@ -1,5 +1,5 @@
-@import url(../../styles/fonts.css);
-@import url(../../styles/animations.css);
+@import url(../fonts.css);
+@import url(../animations.css);
 
 @import url(./sidebar.css);
 @import url(./question.css);
