--- a/client/src/scss/utility.scss
+++ b/client/src/scss/utility.scss
@@ -10,3 +10,15 @@
     display: flex;
     flex-direction: column;
 }
+
+// -----
+
+.Heading {
+    color: var(--pale-azure, #84d2f6);
+    text-align: center;
+    font-family: Alata;
+    font-size: 2.68125rem;
+    margin-bottom: 0;
+    font-weight: 400;
+    line-height: 4rem; /* 149.184% */
+}
